resolved truncation

--- a/docs/_sass/_docs-display-component.scss
+++ b/docs/_sass/_docs-display-component.scss
@@ -14,6 +14,7 @@
     transition: background-color .25s;
 
     > .fd-tile__content {
+        width: 100%;
         padding: 60px 20px;
         overflow: visible;
     }
